BKooL/anam/target/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'['", "']'", "'('", "')'", 
                     "';'", "':'", "','", "'.'", "':='", "'='", "'boolean'", 
                     "'break'", "'class'", "'continue'", "'do'", "'else'", 
                     "'extends'", "'float'", "'if'", "'int'", "'new'", "'string'", 
                     "'then'", "'for'", "'return'", "'true'", "'false'", 
                     "'void'", "'nil'", "'this'", "'final'", "'static'", 
                     "'to'", "'downto'", "'+'", "'-'", "'*'", "'\\'", "'%'", 
                     "'/'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'^'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'_'" ]

    symbolicNames = [ "<INVALID>", "LP", "RP", "LSB", "RSB", "LB", "RB", 
                      "SEMICOLON", "COLON", "COMMA", "DOT", "ASSIGN", "CONST", 
                      "BOOLEAN", "BREAK", "CLASS", "CONTINUE", "DO", "ELSE", 
                      "EXTENDS", "FLOAT", "IF", "INT", "NEW", "STRING", 
                      "THEN", "FOR", "RETURN", "TRUE", "FALSE", "VOID", 
                      "NIL", "THIS", "FINAL", "STATIC", "TO", "DOWNTO", 
                      "ADD", "SUB", "MUL", "I_DIV", "MOD", "F_DIV", "NOT", 
                      "AND", "OR", "EQUAL", "NOT_EQUAL", "LESS_THAN", "GREATER_THAN", 
                      "LESS_THAN_EQ", "GREATER_THAN_EQ", "CONCAT", "INTLIT", 
                      "FLOATLIT", "STRINGLIT", "WS", "BLOCK_CMT", "LINE_CMT", 
                      "ID", "UND", "UNCLOSED_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classList = 1
    RULE_classDecl = 2
    RULE_classBody = 3
    RULE_membersList = 4
    RULE_member = 5
    RULE_attributesDecl = 6
    RULE_methodDecl = 7
    RULE_paramMethod = 8
    RULE_paramDeclList = 9
    RULE_paramDecl = 10
    RULE_bodyMethod = 11
    RULE_varDeclMulList = 12
    RULE_varDecls = 13
    RULE_varDeclList = 14
    RULE_varList = 15
    RULE_typeDecl = 16
    RULE_listStatement = 17
    RULE_statements = 18
    RULE_blockStmt = 19
    RULE_assignStmt = 20
    RULE_lhs = 21
    RULE_ifStmt = 22
    RULE_forStmt = 23
    RULE_condition = 24
    RULE_breakStmt = 25
    RULE_continueStmt = 26
    RULE_returnStmt = 27
    RULE_callStmt = 28
    RULE_expList = 29
    RULE_exp = 30
    RULE_exp1 = 31
    RULE_exp2 = 32
    RULE_exp3 = 33
    RULE_exp4 = 34
    RULE_exp5 = 35
    RULE_exp6 = 36
    RULE_exp7 = 37
    RULE_exp8 = 38
    RULE_exp9 = 39
    RULE_exp10 = 40
    RULE_exp11 = 41
    RULE_subexpression = 42
    RULE_literalList = 43
    RULE_literal = 44
    RULE_idList = 45
    RULE_arrayLit = 46
    RULE_booleanlit = 47

    ruleNames =  [ "program", "classList", "classDecl", "classBody", "membersList", 
                   "member", "attributesDecl", "methodDecl", "paramMethod", 
                   "paramDeclList", "paramDecl", "bodyMethod", "varDeclMulList", 
                   "varDecls", "varDeclList", "varList", "typeDecl", "listStatement", 
                   "statements", "blockStmt", "assignStmt", "lhs", "ifStmt", 
                   "forStmt", "condition", "breakStmt", "continueStmt", 
                   "returnStmt", "callStmt", "expList", "exp", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", 
                   "exp10", "exp11", "subexpression", "literalList", "literal", 
                   "idList", "arrayLit", "booleanlit" ]

    EOF = Token.EOF
    LP=1
    RP=2
    LSB=3
    RSB=4
    LB=5
    RB=6
    SEMICOLON=7
    COLON=8
    COMMA=9
    DOT=10
    ASSIGN=11
    CONST=12
    BOOLEAN=13
    BREAK=14
    CLASS=15
    CONTINUE=16
    DO=17
    ELSE=18
    EXTENDS=19
    FLOAT=20
    IF=21
    INT=22
    NEW=23
    STRING=24
    THEN=25
    FOR=26
    RETURN=27
    TRUE=28
    FALSE=29
    VOID=30
    NIL=31
    THIS=32
    FINAL=33
    STATIC=34
    TO=35
    DOWNTO=36
    ADD=37
    SUB=38
    MUL=39
    I_DIV=40
    MOD=41
    F_DIV=42
    NOT=43
    AND=44
    OR=45
    EQUAL=46
    NOT_EQUAL=47
    LESS_THAN=48
    GREATER_THAN=49
    LESS_THAN_EQ=50
    GREATER_THAN_EQ=51
    CONCAT=52
    INTLIT=53
    FLOATLIT=54
    STRINGLIT=55
    WS=56
    BLOCK_CMT=57
    LINE_CMT=58
    ID=59
    UND=60
    UNCLOSED_STRING=61
    ILLEGAL_ESCAPE=62
    ERROR_CHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classList(self):
            return self.getTypedRuleContext(BKOOLParser.ClassListContext,0)


        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.classList()
            self.state = 97
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDecl(self):
            return self.getTypedRuleContext(BKOOLParser.ClassDeclContext,0)


        def classList(self):
            return self.getTypedRuleContext(BKOOLParser.ClassListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassList" ):
                return visitor.visitClassList(self)
            else:
                return visitor.visitChildren(self)




    def classList(self):

        localctx = BKOOLParser.ClassListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classList)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.classDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.classDecl()
                self.state = 101
                self.classList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def classBody(self):
            return self.getTypedRuleContext(BKOOLParser.ClassBodyContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecl" ):
                return visitor.visitClassDecl(self)
            else:
                return visitor.visitChildren(self)




    def classDecl(self):

        localctx = BKOOLParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDecl)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(BKOOLParser.CLASS)
                self.state = 106
                self.match(BKOOLParser.ID)
                self.state = 107
                self.match(BKOOLParser.EXTENDS)
                self.state = 108
                self.match(BKOOLParser.ID)
                self.state = 109
                self.classBody()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(BKOOLParser.CLASS)
                self.state = 111
                self.match(BKOOLParser.ID)
                self.state = 112
                self.classBody()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def membersList(self):
            return self.getTypedRuleContext(BKOOLParser.MembersListContext,0)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_classBody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = BKOOLParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classBody)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(BKOOLParser.LP)
                self.state = 116
                self.membersList()
                self.state = 117
                self.match(BKOOLParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.match(BKOOLParser.LP)
                self.state = 120
                self.match(BKOOLParser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MembersListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(BKOOLParser.MemberContext,0)


        def membersList(self):
            return self.getTypedRuleContext(BKOOLParser.MembersListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_membersList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMembersList" ):
                return visitor.visitMembersList(self)
            else:
                return visitor.visitChildren(self)




    def membersList(self):

        localctx = BKOOLParser.MembersListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_membersList)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.member()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.member()
                self.state = 125
                self.membersList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributesDecl(self):
            return self.getTypedRuleContext(BKOOLParser.AttributesDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(BKOOLParser.MethodDeclContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = BKOOLParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_member)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.attributesDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.methodDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributesDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeDecl(self):
            return self.getTypedRuleContext(BKOOLParser.TypeDeclContext,0)


        def varDeclList(self):
            return self.getTypedRuleContext(BKOOLParser.VarDeclListContext,0)


        def SEMICOLON(self):
            return self.getToken(BKOOLParser.SEMICOLON, 0)

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_attributesDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributesDecl" ):
                return visitor.visitAttributesDecl(self)
            else:
                return visitor.visitChildren(self)




    def attributesDecl(self):

        localctx = BKOOLParser.AttributesDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attributesDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 135
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKOOLParser.STATIC]:
                    self.state = 133
                    self.match(BKOOLParser.STATIC)
                    pass
                elif token in [BKOOLParser.BOOLEAN, BKOOLParser.FLOAT, BKOOLParser.INT, BKOOLParser.STRING, BKOOLParser.VOID, BKOOLParser.FINAL, BKOOLParser.ID]:
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 139
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKOOLParser.FINAL]:
                    self.state = 137
                    self.match(BKOOLParser.FINAL)
                    pass
                elif token in [BKOOLParser.BOOLEAN, BKOOLParser.FLOAT, BKOOLParser.INT, BKOOLParser.STRING, BKOOLParser.VOID, BKOOLParser.ID]:
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.state = 141
                self.match(BKOOLParser.FINAL)
                self.state = 142
                self.match(BKOOLParser.STATIC)
                pass


            self.state = 145
            self.typeDecl(0)
            self.state = 146
            self.varDeclList()
            self.state = 147
            self.match(BKOOLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def paramMethod(self):
            return self.getTypedRuleContext(BKOOLParser.ParamMethodContext,0)


        def bodyMethod(self):
            return self.getTypedRuleContext(BKOOLParser.BodyMethodContext,0)


        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def typeDecl(self):
            return self.getTypedRuleContext(BKOOLParser.TypeDeclContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_methodDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDecl" ):
                return visitor.visitMethodDecl(self)
            else:
                return visitor.visitChildren(self)




    def methodDecl(self):

        localctx = BKOOLParser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_methodDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC:
                self.state = 149
                self.match(BKOOLParser.STATIC)


            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 152
                self.typeDecl(0)


            self.state = 155
            self.match(BKOOLParser.ID)
            self.state = 156
            self.paramMethod()
            self.state = 157
            self.bodyMethod()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamMethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def paramDeclList(self):
            return self.getTypedRuleContext(BKOOLParser.ParamDeclListContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_paramMethod

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamMethod" ):
                return visitor.visitParamMethod(self)
            else:
                return visitor.visitChildren(self)




    def paramMethod(self):

        localctx = BKOOLParser.ParamMethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramMethod)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.match(BKOOLParser.LB)
                self.state = 160
                self.paramDeclList()
                self.state = 161
                self.match(BKOOLParser.RB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.match(BKOOLParser.LB)
                self.state = 164
                self.match(BKOOLParser.RB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamDeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramDecl(self):
            return self.getTypedRuleContext(BKOOLParser.ParamDeclContext,0)


        def SEMICOLON(self):
            return self.getToken(BKOOLParser.SEMICOLON, 0)

        def paramDeclList(self):
            return self.getTypedRuleContext(BKOOLParser.ParamDeclListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_paramDeclList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamDeclList" ):
                return visitor.visitParamDeclList(self)
            else:
                return visitor.visitChildren(self)




    def paramDeclList(self):

        localctx = BKOOLParser.ParamDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramDeclList)
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.paramDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.paramDecl()
                self.state = 169
                self.match(BKOOLParser.SEMICOLON)
                self.state = 170
                self.paramDeclList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeDecl(self):
            return self.getTypedRuleContext(BKOOLParser.TypeDeclContext,0)


        def idList(self):
            return self.getTypedRuleContext(BKOOLParser.IdListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_paramDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamDecl" ):
                return visitor.visitParamDecl(self)
            else:
                return visitor.visitChildren(self)




    def paramDecl(self):

        localctx = BKOOLParser.ParamDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.typeDecl(0)
            self.state = 175
            self.idList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyMethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockStmt(self):
            return self.getTypedRuleContext(BKOOLParser.BlockStmtContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_bodyMethod

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBodyMethod" ):
                return visitor.visitBodyMethod(self)
            else:
                return visitor.visitChildren(self)




    def bodyMethod(self):

        localctx = BKOOLParser.BodyMethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bodyMethod)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclMulListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecls(self):
            return self.getTypedRuleContext(BKOOLParser.VarDeclsContext,0)


        def varDeclMulList(self):
            return self.getTypedRuleContext(BKOOLParser.VarDeclMulListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_varDeclMulList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclMulList" ):
                return visitor.visitVarDeclMulList(self)
            else:
                return visitor.visitChildren(self)




    def varDeclMulList(self):

        localctx = BKOOLParser.VarDeclMulListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_varDeclMulList)
        try:
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.varDecls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.varDecls()
                self.state = 181
                self.varDeclMulList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclsContext(ParserRuleContext):
        __slots__ = 'parser'
